--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
