--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cycle",
+  "name": "clinic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
-    "browser-image-compression": "^2.0.2",
-    "framer-motion": "^12.23.24",
+    "cloudinary": "^2.8.0",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "mongoose": "^8.20.0",
+    "lucide-react": "^0.554.0",
+    "mongoose": "^8.19.3",
     "next": "16.0.3",
+    "next-connect": "^1.0.0",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0",
-    "recharts": "^3.5.1"
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
