--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,5 @@
-# اتصال بقاعدة بيانات MongoDB
-MONGO_URI=mongodb+srv://ma8966534:539R6QYRvBeYH8RT@cluster0.dnlvipk.mongodb.net/houdaDB?retryWrites=true&w=majority&tlsAllowInvalidCertificates=true
+MONGO_URI=mongodb+srv://codix810_db_user:QIvWGoAsSqEi88qY@cluster0.80x0rnw.mongodb.net/houdaDB?retryWrites=true&w=majority&appName=Cluster0
 
-# سر JWT لتشفير التوكنات
 JWT_SECRET=U2per$Tr0ng_JWT_Secr3t_2025!
 
 CLOUDINARY_API_KEY=477741538971264
